2001-07-27  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_new_file_fopen): Correctly locate ccs=
	substring.  Don't handle ccs= if no descriptor was allocated.
	Normalize codeset name before calling __wcsmbs_named_conv.
	Initialize transliteration elements.  Free step data structure.
	* libio/iofclose.c (_IO_new_fclose): Correct freeing of the step data.
	* libio/iofwide.c (__libio_translit): Renamed from libio_translit
	and made public.  Various little cleanup changes.
	* wcsmbs/wcsmbsload.h (struct gconv_fcts): Add towc_nsteps and
	tomb_nsteps member.
	* wcsmbs/wcsmbsload.c: Add some casts to avoid warnings.
	(__wcsmbs_gconv_fcts): Initialize towc_nsteps and tomb_nsteps member.
	(getfct): Take additional parameter with pointer to variable where the
	number of steps is stored in.  Disable code which allows to use more
	than one step for now.  Adjust all callers.
	(free_mem): New function.  Frees data associated with currently
	selected converters.

	* malloc/mtrace.pl: Extract addresses from DSOs.

2001-07-26  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mcheck.c (checkhdr): Disable mcheck before reporting an
	error.  Don't run any tests if mcheck is disabled.

	* elf/dl-support.c (_dl_important_hwcaps): Avoid using malloc
	early in the program.

2001-07-27  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/s390/s390-32/ucontext_i.h (SC_GPRS): Fix
	value following change from 2001-05-30.

	* sysdeps/s390/s390-64/bits/setjmp.h (_JMPBUF_UNWINDS): Follow
	rename change from 2001-07-12 for __jmp_buf.
	Patches by Ulrich Weigand <Ulrich.Weigand@de.ibm.com>.

2001-07-26  Roland McGrath  <roland@frob.com>

	* sysdeps/generic/bits/termios.h (EXTA, EXTB): Make these conditional
	on __USE_MISC rather than __USE_BSD.
	(B57600, B115200, B230400, B460800, B500000, B576000, B921600,
	B1000000, B1152000, B1500000, B2000000, B2500000, B3000000,
	B3500000, B4000000): New macros.
	* sysdeps/generic/tcsetattr.c (bad_speed): Accept those values.